--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_show_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_show_oauth.yaml
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 24 Feb 2021 06:54:21 GMT
+      - Wed, 24 Feb 2021 07:21:51 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11989'
+      - '11999'
     status:
       code: 200
       message: OK
@@ -59,7 +59,7 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Wed, 24 Feb 2021 06:54:22 GMT
+      - Wed, 24 Feb 2021 07:21:52 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Wed, 24 Feb 2021 06:54:24 GMT
+      - Wed, 24 Feb 2021 07:21:54 GMT
       etag:
-      - '"0x8D8D89105B8E3FF"'
+      - '"0x8D8D894DCED74A2"'
       last-modified:
-      - Wed, 24 Feb 2021 06:54:25 GMT
+      - Wed, 24 Feb 2021 07:21:54 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -95,30 +95,672 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Wed, 24 Feb 2021 06:54:27 GMT
+      - Wed, 24 Feb 2021 07:21:55 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
     uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>AuthorizationPermissionMismatch</Code><Message>This
-        request is not authorized to perform this operation using this permission.\nRequestId:38825c2c-f01e-0023-1c79-0a4ca0000000\nTime:2021-02-24T06:54:28.0948579Z</Message></Error>"
+      string: ''
     headers:
       content-length:
-      - '279'
-      content-type:
-      - application/xml
+      - '0'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Wed, 24 Feb 2021 06:54:27 GMT
+      - Wed, 24 Feb 2021 07:21:56 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-error-code:
-      - AuthorizationPermissionMismatch
+      x-ms-request-server-encrypted:
+      - 'true'
       x-ms-version:
       - '2018-11-09'
     status:
-      code: 403
-      message: This request is not authorized to perform this operation using this
-        permission.
+      code: 201
+      message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:58 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:21:58 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '0'
+      User-Agent:
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
+      x-ms-blob-content-length:
+      - '131072'
+      x-ms-blob-type:
+      - PageBlob
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:59 GMT
+      x-ms-version:
+      - '2018-11-09'
+    method: PUT
+    uri: https://clitest000002.blob.core.windows.net/cont000003/page000005
+  response:
+    body:
+      string: ''
+    headers:
+      content-length:
+      - '0'
+      date:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      etag:
+      - '"0x8D8D894E086DAC8"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-request-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2018-11-09'
+    status:
+      code: 201
+      message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/page000005
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:01 GMT
+      etag:
+      - '"0x8D8D894E086DAC8"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-sequence-number:
+      - '0'
+      x-ms-blob-type:
+      - PageBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:02 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: GET
+    uri: https://clitest000002.blob.core.windows.net/cont000003/page000005?comp=pagelist
+  response:
+    body:
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><PageList />"
+    headers:
+      content-type:
+      - application/xml
+      date:
+      - Wed, 24 Feb 2021 07:22:01 GMT
+      etag:
+      - '"0x8D8D894E086DAC8"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      x-ms-blob-content-length:
+      - '131072'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '0'
+      User-Agent:
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:02 GMT
+      x-ms-version:
+      - '2018-11-09'
+    method: PUT
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004?comp=snapshot
+  response:
+    body:
+      string: ''
+    headers:
+      content-length:
+      - '0'
+      date:
+      - Wed, 24 Feb 2021 07:22:02 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-request-server-encrypted:
+      - 'false'
+      x-ms-snapshot:
+      - '2021-02-24T07:22:03.3768175Z'
+      x-ms-version:
+      - '2018-11-09'
+    status:
+      code: 201
+      message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:03 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:04 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-Match:
+      - '0x8D8D894DE712E06'
+      ParameterSetName:
+      - -c -n --account-name --if-match --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:04 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:05 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-Match:
+      - '*'
+      ParameterSetName:
+      - -c -n --account-name --if-match --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:06 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:06 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-None-Match:
+      - '0x8D8D894DE712E06'
+      ParameterSetName:
+      - -c -n --account-name --if-none-match --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:07 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      content-length:
+      - '0'
+      date:
+      - Wed, 24 Feb 2021 07:22:07 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-error-code:
+      - ConditionNotMet
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 304
+      message: The condition specified using HTTP conditional header(s) is not met.
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-None-Match:
+      - '*'
+      ParameterSetName:
+      - -c -n --account-name --if-none-match --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:08 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      date:
+      - Wed, 24 Feb 2021 07:22:09 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      x-ms-error-code:
+      - UnsatisfiableCondition
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 400
+      message: The request includes an unsatisfiable condition for this operation.
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-Unmodified-Since:
+      - Mon, 29 Jun 2020 06:32:00 GMT
+      ParameterSetName:
+      - -c -n --account-name --if-unmodified-since --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:09 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      date:
+      - Wed, 24 Feb 2021 07:22:10 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      x-ms-error-code:
+      - ConditionNotMet
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 412
+      message: The condition specified using HTTP conditional header(s) is not met.
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      If-Modified-Since:
+      - Mon, 29 Jun 2020 06:32:00 GMT
+      ParameterSetName:
+      - -c -n --account-name --if-modified-since --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:10 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/block000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '131072'
+      content-md5:
+      - DfvoqkwgtS4bi/PLbL3xkw==
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:11 GMT
+      etag:
+      - '"0x8D8D894DE712E06"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
 version: 1
