--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier_oauth.yaml
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 24 Feb 2021 06:55:24 GMT
+      - Wed, 24 Feb 2021 07:21:52 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11990'
+      - '11999'
     status:
       code: 200
       message: OK
@@ -59,7 +59,7 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Wed, 24 Feb 2021 06:55:25 GMT
+      - Wed, 24 Feb 2021 07:21:52 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Wed, 24 Feb 2021 06:55:27 GMT
+      - Wed, 24 Feb 2021 07:21:55 GMT
       etag:
-      - '"0x8D8D8912B747093"'
+      - '"0x8D8D894DD717638"'
       last-modified:
-      - Wed, 24 Feb 2021 06:55:28 GMT
+      - Wed, 24 Feb 2021 07:21:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -99,30 +99,274 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-date:
-      - Wed, 24 Feb 2021 06:55:30 GMT
+      - Wed, 24 Feb 2021 07:21:56 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
     uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
   response:
     body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<Error><Code>AuthorizationPermissionMismatch</Code><Message>This
-        request is not authorized to perform this operation using this permission.\nRequestId:2338dc10-f01c-00d1-5b7a-0af127000000\nTime:2021-02-24T06:55:32.2603504Z</Message></Error>"
+      string: ''
     headers:
       content-length:
-      - '280'
-      content-type:
-      - application/xml
+      - '0'
       date:
-      - Wed, 24 Feb 2021 06:55:31 GMT
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      etag:
+      - '"0x8D8D894DE65FF9C"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-error-code:
-      - AuthorizationPermissionMismatch
+      x-ms-request-server-encrypted:
+      - 'true'
       x-ms-version:
       - '2018-11-09'
     status:
-      code: 403
-      message: This request is not authorized to perform this operation using this
-        permission.
+      code: 201
+      message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '16384'
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      etag:
+      - '"0x8D8D894DE65FF9C"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-access-tier:
+      - P10
+      x-ms-blob-sequence-number:
+      - '0'
+      x-ms-blob-type:
+      - PageBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:58 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: GET
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=pagelist
+  response:
+    body:
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<PageList/>"
+    headers:
+      content-type:
+      - application/xml
+      date:
+      - Wed, 24 Feb 2021 07:21:58 GMT
+      etag:
+      - '"0x8D8D894DE65FF9C"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      x-ms-blob-content-length:
+      - '16384'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob set-tier
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '0'
+      ParameterSetName:
+      - -c -n --tier -t --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-access-tier:
+      - P20
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:21:59 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: PUT
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=tier
+  response:
+    body:
+      string: ''
+    headers:
+      content-length:
+      - '0'
+      date:
+      - Wed, 24 Feb 2021 07:21:59 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: HEAD
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '16384'
+      content-type:
+      - application/octet-stream
+      date:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      etag:
+      - '"0x8D8D894DE65FF9C"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      x-ms-access-tier:
+      - P20
+      x-ms-blob-sequence-number:
+      - '0'
+      x-ms-blob-type:
+      - PageBlob
+      x-ms-creation-time:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      x-ms-lease-state:
+      - available
+      x-ms-lease-status:
+      - unlocked
+      x-ms-server-encrypted:
+      - 'true'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - storage blob show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
+      User-Agent:
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
+      x-ms-date:
+      - Wed, 24 Feb 2021 07:22:01 GMT
+      x-ms-version:
+      - '2019-12-12'
+    method: GET
+    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=pagelist
+  response:
+    body:
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<PageList/>"
+    headers:
+      content-type:
+      - application/xml
+      date:
+      - Wed, 24 Feb 2021 07:22:00 GMT
+      etag:
+      - '"0x8D8D894DE65FF9C"'
+      last-modified:
+      - Wed, 24 Feb 2021 07:21:57 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      x-ms-blob-content-length:
+      - '16384'
+      x-ms-version:
+      - '2019-12-12'
+    status:
+      code: 200
+      message: OK
 version: 1
