--- a/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_encryption_set_show.yaml
+++ b/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_encryption_set_show.yaml
@@ -16,7 +16,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -n -g --storage-account -l --id-system-assigned
+      - -n -g --storage-account -l --mi-system-assigned
       User-Agent:
       - python/3.8.2 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-media/3.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
