--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
             "name": "Azure CLI Debug (Integrated Console)",
             "type": "python",
             "request": "launch",
-            "python": "${command:python.interpreterPath}",
+            "pythonPath": "${command:python.interpreterPath}",
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "storage", "blob", "sync", "-c", "test", "--account-name", "zuhtest2", "--auth-mode", "login", "-s", "~/azure-cli/shadowsocks-all.sh", "-d", "test"
+                "--help"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
@@ -24,7 +24,7 @@
             "type": "python",
             "request": "launch",
             "stopOnEntry": true,
-            "python": "${command:python.interpreterPath}",
+            "pythonPath": "${command:python.interpreterPath}",
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
@@ -40,7 +40,7 @@
             "name": "Azdev Scripts",
             "type": "python",
             "request": "launch",
-            "python": "${command:python.interpreterPath}",
+            "pythonPath": "${command:python.interpreterPath}",
             "program": "${workspaceRoot}/tools/automation/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
