--- a/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_postgres_flexible_server_list.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_postgres_flexible_server_list.yaml
@@ -13,29 +13,27 @@ interactions:
       ParameterSetName:
       - -g
       User-Agent:
-      - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+      - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.21 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.19.1
-        (MSI)
       accept-language:
       - en-US
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBForPostgreSql/flexibleServers?api-version=2020-02-14-preview
   response:
     body:
-      string: '{"value":[{"sku":{"name":"Standard_B1ms","tier":"Burstable","capacity":1},"properties":{"fullyQualifiedDomainName":"azuredbclitest-1000003.postgres.database.azure.com","version":"12","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"eagerBobcat0","publicNetworkAccess":"Enabled","logBackupStorageSku":"Standard_ZRS","haState":"NotEnabled","state":"Ready","availabilityZone":"1","storageProfile":{"storageMB":131072,"backupRetentionDays":7},"earliestRestoreDate":"2021-02-24T05:59:34.9545745+00:00","byokEnforcement":"Disabled"},"location":"East
-        US","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-1000003","name":"azuredbclitest-1000003","type":"Microsoft.DBforPostgreSQL/flexibleServers"},{"sku":{"name":"Standard_E2s_v3","tier":"MemoryOptimized","capacity":2},"properties":{"fullyQualifiedDomainName":"azuredbclitest-2000004.postgres.database.azure.com","version":"12","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"bossyHamster3","publicNetworkAccess":"Enabled","logBackupStorageSku":"Standard_ZRS","haState":"NotEnabled","state":"Ready","availabilityZone":"3","storageProfile":{"storageMB":131072,"backupRetentionDays":7},"earliestRestoreDate":"2021-02-24T06:15:09.8786363+00:00","byokEnforcement":"Disabled"},"location":"East
-        US","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-2000004","name":"azuredbclitest-2000004","type":"Microsoft.DBforPostgreSQL/flexibleServers"},{"sku":{"name":"Standard_D2s_v3","tier":"GeneralPurpose","capacity":2},"properties":{"fullyQualifiedDomainName":"azuredbclitest-3000005.postgres.database.azure.com","version":"11","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"fixedDunbird9","publicNetworkAccess":"Enabled","logBackupStorageSku":"Standard_ZRS","haState":"NotEnabled","state":"Ready","availabilityZone":"2","storageProfile":{"storageMB":131072,"backupRetentionDays":7},"earliestRestoreDate":"2021-02-24T06:23:18.4782876+00:00","byokEnforcement":"Disabled"},"location":"East
-        US","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-3000005","name":"azuredbclitest-3000005","type":"Microsoft.DBforPostgreSQL/flexibleServers"},{"sku":{"name":"Standard_E2s_v3","tier":"MemoryOptimized","capacity":2},"properties":{"fullyQualifiedDomainName":"azuredbclitest-000002.postgres.database.azure.com","version":"12","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"dopeyMacaw5","publicNetworkAccess":"Enabled","logBackupStorageSku":"Standard_ZRS","haState":"NotEnabled","state":"Ready","availabilityZone":"2","storageProfile":{"storageMB":262144,"backupRetentionDays":17},"earliestRestoreDate":"2021-02-24T05:24:28.2129783+00:00","byokEnforcement":"Disabled"},"location":"East
-        US","tags":{"key":"3"},"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-000002","name":"azuredbclitest-000002","type":"Microsoft.DBforPostgreSQL/flexibleServers"}]}'
+      string: '{"value":[{"sku":{"name":"Standard_B1ms","tier":"Burstable","capacity":1},"properties":{"fullyQualifiedDomainName":"azuredbclitest-1000003.postgres.database.azure.com","version":"12","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"exoticRaisins3","publicNetworkAccess":"Enabled","logBackupStorageSku":"","haState":"","state":"Provisioning","availabilityZone":"1","storageProfile":{"storageMB":131072,"backupRetentionDays":7},"earliestRestoreDate":"2021-02-25T08:24:13.4909143+00:00","byokEnforcement":"Disabled"},"location":"East
+        US 2 EUAP","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-1000003","name":"azuredbclitest-1000003","type":"Microsoft.DBforPostgreSQL/flexibleServers"},{"sku":{"name":"Standard_E2s_v3","tier":"MemoryOptimized","capacity":2},"properties":{"fullyQualifiedDomainName":"azuredbclitest-000002.postgres.database.azure.com","version":"12","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"machoSnail8","publicNetworkAccess":"Enabled","logBackupStorageSku":"Standard_ZRS","haState":"NotEnabled","state":"Ready","availabilityZone":"1","storageProfile":{"storageMB":262144,"backupRetentionDays":17},"earliestRestoreDate":"2021-02-25T01:00:48.046992+00:00","byokEnforcement":"Disabled"},"location":"East
+        US 2 EUAP","tags":{"key":"3"},"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-000002","name":"azuredbclitest-000002","type":"Microsoft.DBforPostgreSQL/flexibleServers"},{"sku":{"name":"Standard_D2s_v3","tier":"GeneralPurpose","capacity":2},"properties":{"fullyQualifiedDomainName":"azuredbclitest-3000005.postgres.database.azure.com","version":"11","standbyCount":0,"haEnabled":"Disabled","administratorLogin":"violentTomatoe9","publicNetworkAccess":"Enabled","logBackupStorageSku":"","haState":"","state":"Provisioning","availabilityZone":"1","storageProfile":{"storageMB":131072,"backupRetentionDays":7},"earliestRestoreDate":"2021-02-25T08:24:13.4909143+00:00","byokEnforcement":"Disabled"},"location":"East
+        US 2 EUAP","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforPostgreSQL/flexibleServers/azuredbclitest-3000005","name":"azuredbclitest-3000005","type":"Microsoft.DBforPostgreSQL/flexibleServers"}]}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '3923'
+      - '2932'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 24 Feb 2021 06:48:18 GMT
+      - Thu, 25 Feb 2021 08:24:13 GMT
       expires:
       - '-1'
       pragma:
